--- a/scss/index.scss
+++ b/scss/index.scss
@@ -96,6 +96,13 @@ $mainGray: #231F1F;
     background-color: $mainGray;
 }
 
+//  TEXT COLOR 
+//––––––––––––––––––––––––––––––––––––––––––––––––––
+
+.text-black{
+    color: $black;
+}
+
 
 //  VIEWPORT HEIGHT
 //––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -128,6 +135,10 @@ $mainGray: #231F1F;
     height: 15vh;
 }
 
+.vw-80{
+    width: 83vw;
+}
+
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 // MAIN VISUAL
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -154,6 +165,15 @@ $mainGray: #231F1F;
 	}	
 }
 
+.main-visual{
+    position: relative;
+    top: 0;
+    @include respond-below(md) {
+    position: absolute;
+    top: 15vh;
+    }
+}
+
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 //  SECTION 
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -165,7 +185,7 @@ $mainGray: #231F1F;
 .selfphoto{
     @include respond-below(md) {
 		top: 40px;
-        left: 40px;
+        left: 60px;
         font-size: 10px;
         z-index: 1;
 	}	
@@ -173,8 +193,10 @@ $mainGray: #231F1F;
 
 .bg-selfphoto{
     @include respond-below(md) {
-		top: 110px;
-        left: 60px;
+        width: 170px;
+        height: 200px;
+		top: 60px;
+        left: 80px;
         font-size: 10px;
         z-index: 0;
         background-color: $black-opc50;
