--- a/scss/index.scss
+++ b/scss/index.scss
@@ -68,6 +68,17 @@ $font-size-xxl: 1.875rem;
     font-size: $font-size-xxl;
 }
 
+.text-secttl{
+    font-size: 10rem;
+    padding-left: 3rem;
+    padding-bottom: 10rem;
+    @include respond-below(md) {
+        font-size: 4rem;
+        padding-left: 0.5rem;
+        padding-bottom: 5rem;
+	}
+}
+
 
 //  COLOR 
 //––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -75,6 +86,8 @@ $font-size-xxl: 1.875rem;
 $black: #000000;
 
 $black-opc50: rgba(0, 0, 0, 0.5);
+
+$black-opc30: rgba(0, 0, 0, 0.3);
 
 $mainRed: rgba(254, 8, 8, 0.3);
 
@@ -86,6 +99,10 @@ $mainGray: #231F1F;
 
 .bg-black__opc50{
     background-color: $black-opc50;
+}
+
+.bg-black__opc30{
+    background-color: $black-opc30;
 }
 
 .bg-mainRed{
@@ -149,7 +166,7 @@ $mainGray: #231F1F;
     font-size: 100px;
     @include respond-below(md) {
         top:100px;
-        left: 20px;
+        left: 15px;
         font-size: 30px;
 	}	
 }
@@ -166,39 +183,65 @@ $mainGray: #231F1F;
 }
 
 .main-visual{
-    position: relative;
-    top: 0;
+    height: 700px;
     @include respond-below(md) {
     position: absolute;
     top: 15vh;
     }
 }
 
+header{
+    height: 115vh;
+    background-color: $black;
+}
+
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 //  SECTION 
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 
+.secpdd{
+    padding-top: 20rem;
+}
 
 //  SECTION ABOUT
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
+.txt__about{
+    height: 80vh;
+    @include respond-below(md) {
+        height: 50vh;
+    }
+}
+
 .selfphoto{
+    z-index: 1;
     @include respond-below(md) {
 		top: 40px;
         left: 60px;
         font-size: 10px;
-        z-index: 1;
+	}	
+}
+
+.selfphoto__img{
+    width: 30rem;
+    height: 35rem;
+    z-index: 1;
+    @include respond-below(md) {
+        width: 13rem;
+        height: 16rem;
+        left: 60px;
+        font-size: 10px;
 	}	
 }
 
 .bg-selfphoto{
+    z-index: 0;
     @include respond-below(md) {
         width: 170px;
         height: 200px;
 		top: 60px;
         left: 80px;
         font-size: 10px;
-        z-index: 0;
         background-color: $black-opc50;
 	}	
 }
@@ -208,12 +251,30 @@ $mainGray: #231F1F;
 .skill-icon{
     width: 120px;
     height: 120px;
+    background-color: $black-opc30;
 }
 
 
 //  SECTION PRODUCTS
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
+.products-img__Loveandbeer{
+    width: 30vw;
+    height: 50vh;
+    @include respond-below(md) {
+        width: 82vw;
+        height: 50vh;
+	}
+}
+
+.products-img__ideabox{
+    width: 30vw;
+    height: 50vh;
+    @include respond-below(md) {
+        width: 82vw;
+        height: 50vh;
+	}
+}
 
 
 
