--- a/scss/index.css
+++ b/scss/index.css
@@ -41,6 +41,7 @@
   font-size: 10rem;
   padding-left: 3rem;
   padding-bottom: 10rem;
+  position: relative;
 }
 
 @media (max-width: 767px) {
@@ -48,6 +49,24 @@
     font-size: 4rem;
     padding-left: 0.5rem;
     padding-bottom: 5rem;
+  }
+}
+
+.text-secttl::after {
+  position: absolute;
+  bottom: 10rem;
+  left: 3.5rem;
+  z-index: 2;
+  content: '';
+  width: 30%;
+  height: 5px;
+  background-color: #FF0606;
+}
+
+@media (max-width: 767px) {
+  .text-secttl::after {
+    bottom: 4.5rem;
+    left: 1rem;
   }
 }
 
@@ -155,13 +174,14 @@
 
 @media (max-width: 767px) {
   .main-visual {
+    height: 500px;
     position: absolute;
-    top: 15vh;
+    top: 25vh;
   }
 }
 
 header {
-  height: 115vh;
+  height: 100vh;
   background-color: #000000;
 }
 
