--- a/scss/index.css
+++ b/scss/index.css
@@ -267,6 +267,14 @@ header {
   width: 120px;
   height: 120px;
   background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill-icon__img {
+  color: white;
+  font-size: 3rem;
 }
 
 .products-img__Loveandbeer {
