--- a/scss/index.scss
+++ b/scss/index.scss
@@ -300,6 +300,14 @@ header{
     width: 120px;
     height: 120px;
     background-color: $black-opc30;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-icon__img{
+    color: white;
+    font-size: 3rem;
 }
 
 
