--- a/scss/index.css
+++ b/scss/index.css
@@ -58,7 +58,7 @@
   left: 3.5rem;
   z-index: 2;
   content: '';
-  width: 30%;
+  width: 12rem;
   height: 5px;
   background-color: #FF0606;
 }
@@ -67,6 +67,7 @@
   .text-secttl::after {
     bottom: 4.5rem;
     left: 1rem;
+    width: 5rem;
   }
 }
 
@@ -221,21 +222,17 @@ header {
   }
 }
 
-.selfphoto {
-  z-index: 1;
-}
-
 @media (max-width: 767px) {
   .selfphoto {
-    top: 40px;
-    left: 60px;
-    font-size: 10px;
+    height: 16rem;
+    position: relative;
   }
 }
 
 .selfphoto__img {
   width: 30rem;
   height: 35rem;
+  position: relative;
   z-index: 1;
 }
 
@@ -243,20 +240,24 @@ header {
   .selfphoto__img {
     width: 13rem;
     height: 16rem;
-    left: 60px;
-    font-size: 10px;
   }
 }
 
 .bg-selfphoto {
   z-index: 0;
+  width: 30rem;
+  left: 4rem;
+  height: 35rem;
+  top: 3rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: relative;
 }
 
 @media (max-width: 767px) {
   .bg-selfphoto {
-    width: 170px;
-    height: 200px;
-    top: 60px;
+    width: 13rem;
+    height: 16rem;
+    top: 1rem;
     left: 80px;
     font-size: 10px;
     background-color: rgba(0, 0, 0, 0.5);
