--- a/scss/index.css
+++ b/scss/index.css
@@ -151,7 +151,7 @@
   .title {
     top: 100px;
     left: 15px;
-    font-size: 30px;
+    font-size: 3rem;
   }
 }
 
@@ -163,9 +163,9 @@
 
 @media (max-width: 767px) {
   .subtitle {
-    top: 140px;
-    left: 100px;
-    font-size: 10px;
+    top: 10rem;
+    left: 10rem;
+    font-size: 1rem;
   }
 }
 
@@ -326,4 +326,53 @@ header {
   .pd-txt {
     height: 50vh;
   }
+}
+
+#page_top {
+  width: 90px;
+  height: 90px;
+  position: fixed;
+  right: 1rem;
+  bottom: 2.5rem;
+  opacity: 0.6;
+  z-index: 3;
+}
+
+#page_top a {
+  position: relative;
+  display: block;
+  width: 90px;
+  height: 90px;
+  text-decoration: none;
+}
+
+#page_top a::before {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f102';
+  font-size: 2rem;
+  color: #000000;
+  position: absolute;
+  width: 1.3rem;
+  height: 1.3rem;
+  top: -5rem;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+}
+
+#page_top a::after {
+  content: 'PAGE TOP';
+  font-size: 1rem;
+  color: #fff;
+  position: absolute;
+  top: 45px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+  color: #fff;
 }
