--- a/scss/index.css
+++ b/scss/index.css
@@ -44,7 +44,7 @@
   position: relative;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .text-secttl {
     font-size: 4rem;
     padding-left: 0.5rem;
@@ -63,7 +63,7 @@
   background-color: #FF0606;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .text-secttl::after {
     bottom: 4.5rem;
     left: 1rem;
@@ -77,7 +77,7 @@
   padding-bottom: 10rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .txt-pdttl {
     font-size: 2rem;
     padding-left: 0.5rem;
@@ -147,7 +147,7 @@
   font-size: 100px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .title {
     top: 100px;
     left: 15px;
@@ -161,7 +161,7 @@
   font-size: 40px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .subtitle {
     top: 10rem;
     left: 10rem;
@@ -173,11 +173,19 @@
   height: 700px;
 }
 
+@media (max-width: 959px) {
+  .main-visual {
+    height: 600px;
+    position: absolute;
+    top: 40vh;
+  }
+}
+
 @media (max-width: 767px) {
   .main-visual {
     height: 500px;
     position: absolute;
-    top: 25vh;
+    top: 20vh;
   }
 }
 
@@ -186,13 +194,13 @@ header {
   background-color: #000000;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .order1 {
     order: 1;
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .order2 {
     order: 2;
   }
@@ -202,7 +210,7 @@ header {
   display: flex;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .flexbox {
     flex-direction: column;
   }
@@ -212,17 +220,23 @@ header {
   padding-top: 20rem;
 }
 
+@media (max-width: 959px) {
+  .secpdd {
+    padding-top: 10rem;
+  }
+}
+
 .txt__about {
   height: 80vh;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .txt__about {
     height: 50vh;
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .selfphoto {
     height: 16rem;
     position: relative;
@@ -236,7 +250,7 @@ header {
   z-index: 1;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .selfphoto__img {
     width: 13rem;
     height: 16rem;
@@ -253,7 +267,7 @@ header {
   position: relative;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .bg-selfphoto {
     width: 13rem;
     height: 16rem;
@@ -278,18 +292,20 @@ header {
   font-size: 3rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .skills-box {
     padding-bottom: 30rem;
   }
 }
 
 .products-img__Loveandbeer {
-  width: 40vw;
+  width: 100%;
   height: 70vh;
+  object-fit: cover;
+  object-position: left;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .products-img__Loveandbeer {
     width: 82vw;
     height: 50vh;
@@ -297,11 +313,13 @@ header {
 }
 
 .products-img__ideabox {
-  width: 40vw;
+  width: 100%;
   height: 70vh;
+  object-fit: cover;
+  object-position: top;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .products-img__ideabox {
     width: 82vw;
     height: 50vh;
@@ -312,7 +330,7 @@ header {
   height: 100vh;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .pd-img {
     height: 50vh;
   }
@@ -322,7 +340,7 @@ header {
   height: 100vh;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   .pd-txt {
     height: 50vh;
   }
