--- a/scss/index.scss
+++ b/scss/index.scss
@@ -73,7 +73,7 @@ $font-size-xxl: 1.875rem;
     padding-left: 3rem;
     padding-bottom: 10rem;
     position: relative;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         font-size: 4rem;
         padding-left: 0.5rem;
         padding-bottom: 5rem;
@@ -89,7 +89,7 @@ $font-size-xxl: 1.875rem;
     width: 12rem;
     height: 5px;
     background-color: #FF0606;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         bottom: 4.5rem;
         left: 1rem;
         width: 5rem;
@@ -100,7 +100,7 @@ $font-size-xxl: 1.875rem;
     font-size: 4rem;
     padding-left: 1rem;
     padding-bottom: 10rem;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         font-size: 2rem;
         padding-left: 0.5rem;
         padding-bottom: 5rem;
@@ -192,7 +192,7 @@ $mainGray: #231F1F;
     top: 400px;
     left: 100px;
     font-size: 100px;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         top:100px;
         left: 15px;
         font-size: 3rem;
@@ -203,7 +203,7 @@ $mainGray: #231F1F;
     top:530px;
     left: 400px;
     font-size: 40px;
-    @include respond-below(md) {
+    @include respond-below(lg) {
 		top: 10rem;
         left: 10rem;
         font-size: 1rem;
@@ -212,10 +212,15 @@ $mainGray: #231F1F;
 
 .main-visual{
     height: 700px;
-    @include respond-below(md) {
-    height: 500px;
+    @include respond-below(lg) {
+    height: 600px;
     position: absolute;
-    top: 25vh;
+    top: 40vh;
+    }
+    @include respond-below(md) {
+        height: 500px;
+        position: absolute;
+        top: 20vh;
     }
 }
 
@@ -225,20 +230,20 @@ header{
 }
 
 .order1{
-    @include respond-below(md) {
+    @include respond-below(lg) {
         order: 1;
     }
 }
 
 .order2{
-    @include respond-below(md) {
+    @include respond-below(lg) {
         order: 2;
     }
 }
 
 .flexbox{
     display: flex;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         flex-direction: column;
     }
 }
@@ -250,6 +255,9 @@ header{
 
 .secpdd{
     padding-top: 20rem;
+    @include respond-below(lg) {
+        padding-top: 10rem;
+    }
 }
 
 //  SECTION ABOUT
@@ -257,13 +265,13 @@ header{
 
 .txt__about{
     height: 80vh;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         height: 50vh;
     }
 }
 
 .selfphoto{
-    @include respond-below(md) {
+    @include respond-below(lg) {
         height: 16rem;
         position: relative;
 	}
@@ -274,7 +282,7 @@ header{
     height: 35rem;
     position: relative;
     z-index: 1;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         width: 13rem;
         height: 16rem;
 	}	
@@ -288,7 +296,7 @@ header{
     top: 3rem;
     background-color: $black-opc50;
     position: relative;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         width: 13rem;
         height: 16rem;
 		top: 1rem;
@@ -315,7 +323,7 @@ header{
 }
 
 .skills-box{
-    @include respond-below(md) {
+    @include respond-below(lg) {
         padding-bottom: 30rem;
     }
 }
@@ -325,18 +333,22 @@ header{
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 .products-img__Loveandbeer{
-    width: 40vw;
+    width: 100%;
     height: 70vh;
-    @include respond-below(md) {
+    object-fit: cover;
+    object-position: left;
+    @include respond-below(lg) {
         width: 82vw;
         height: 50vh;
 	}
 }
 
 .products-img__ideabox{
-    width: 40vw;
+    width: 100%;
     height: 70vh;
-    @include respond-below(md) {
+    object-fit: cover;
+    object-position: top;
+    @include respond-below(lg) {
         width: 82vw;
         height: 50vh;
 	}
@@ -344,14 +356,14 @@ header{
 
 .pd-img{
     height: 100vh;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         height: 50vh;
     }
 }
 
 .pd-txt{
     height: 100vh;
-    @include respond-below(md) {
+    @include respond-below(lg) {
         height: 50vh;
     }
 }
