--- a/scss/index.css
+++ b/scss/index.css
@@ -232,49 +232,41 @@ header {
 
 @media (max-width: 959px) {
   .txt__about {
-    height: 50vh;
+    height: 30vh;
+  }
+}
+
+@media (max-width: 575px) {
+  .txt__about {
+    height: 40vh;
   }
 }
 
 @media (max-width: 959px) {
   .selfphoto {
-    height: 16rem;
     position: relative;
+    height: 30vh;
+  }
+}
+
+@media (max-width: 575px) {
+  .selfphoto {
+    height: 45vh;
   }
 }
 
 .selfphoto__img {
-  width: 30rem;
-  height: 35rem;
+  width: 80%;
+  height: 100%;
   position: relative;
   z-index: 1;
+  box-shadow: 2rem 2rem 0 0 rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 959px) {
   .selfphoto__img {
     width: 13rem;
     height: 16rem;
-  }
-}
-
-.bg-selfphoto {
-  z-index: 0;
-  width: 30rem;
-  left: 4rem;
-  height: 35rem;
-  top: 3rem;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: relative;
-}
-
-@media (max-width: 959px) {
-  .bg-selfphoto {
-    width: 13rem;
-    height: 16rem;
-    top: 1rem;
-    left: 80px;
-    font-size: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
