--- a/scss/index.css
+++ b/scss/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -47,6 +48,22 @@
 @media (max-width: 959px) {
   .text-secttl {
     font-size: 4rem;
+    padding-left: 0.5rem;
+    padding-bottom: 5rem;
+  }
+}
+
+@media (max-width: 766px) {
+  .text-secttl {
+    font-size: 5rem;
+    padding-left: 0.5rem;
+    padding-bottom: 5rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .text-secttl {
+    font-size: 3.5rem;
     padding-left: 0.5rem;
     padding-bottom: 5rem;
   }
@@ -181,7 +198,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 766px) {
   .main-visual {
     height: 500px;
     position: absolute;
@@ -245,13 +262,19 @@ header {
 @media (max-width: 959px) {
   .selfphoto {
     position: relative;
-    height: 30vh;
+    height: 45vh;
+  }
+}
+
+@media (max-width: 766px) {
+  .selfphoto {
+    height: 20vh;
   }
 }
 
 @media (max-width: 575px) {
   .selfphoto {
-    height: 45vh;
+    height: 50vh;
   }
 }
 
@@ -290,6 +313,14 @@ header {
   }
 }
 
+.products-img {
+  transform: translateX(50px);
+  /* 最初は元の位置より左にずらしておく */
+  opacity: 0;
+  /* 最初は非表示にしておく */
+  transition: opacity 1s,transform 1s;
+}
+
 .products-img__Loveandbeer {
   width: 100%;
   height: 70vh;
@@ -302,6 +333,14 @@ header {
     width: 82vw;
     height: 50vh;
   }
+}
+
+.fadein {
+  opacity: 1 !important;
+  /* 表示させる */
+  transform: translateX(0) !important;
+  /* 位置を最初の位置に戻す */
+  z-index: 5;
 }
 
 .products-img__ideabox {
@@ -330,6 +369,11 @@ header {
 
 .pd-txt {
   height: 100vh;
+  transform: translateX(-50px);
+  /* 最初は元の位置より左にずらしておく */
+  opacity: 0;
+  /* 最初は非表示にしておく */
+  transition: opacity 1s,transform 1s;
 }
 
 @media (max-width: 959px) {
