--- a/scss/index.css
+++ b/scss/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -69,6 +68,14 @@
   }
 }
 
+.typing {
+  opacity: 0;
+}
+
+.typing span {
+  opacity: 0;
+}
+
 .text-secttl::after {
   position: absolute;
   bottom: 10rem;
@@ -124,6 +131,14 @@
 
 .text-black {
   color: #000000;
+}
+
+.txt-red {
+  color: red !important;
+}
+
+.txt-white {
+  color: white !important;
 }
 
 .vh-80 {
@@ -245,6 +260,9 @@ header {
 
 .txt__about {
   height: 80vh;
+  transform: translateX(-100px);
+  opacity: 0;
+  transition: opacity 1s,transform 1.5s;
 }
 
 @media (max-width: 959px) {
@@ -257,6 +275,12 @@ header {
   .txt__about {
     height: 40vh;
   }
+}
+
+.selfphoto {
+  transform: translateX(100px);
+  opacity: 0;
+  transition: opacity 1s,transform 1.5s;
 }
 
 @media (max-width: 959px) {
@@ -307,18 +331,48 @@ header {
   font-size: 3rem;
 }
 
+.skills-box:nth-child(1) {
+  transform: translateY(100px);
+  opacity: 0;
+  transition: opacity 1s,transform 1.5s;
+}
+
+.skills-box:nth-child(2) {
+  transform: translateY(150px);
+  opacity: 0;
+  transition: opacity 2s,transform 1.5s;
+}
+
+.skills-box:nth-child(3) {
+  transform: translateY(200px);
+  opacity: 0;
+  transition: opacity 3s,transform 1.5s;
+}
+
+.skills-box:nth-child(4) {
+  transform: translateY(250px);
+  opacity: 0;
+  transition: opacity 2s,transform 1.5s;
+}
+
 @media (max-width: 959px) {
   .skills-box {
+    transform: translateY(100px);
+    opacity: 0;
+    transition: opacity 1s,transform 1s;
+  }
+}
+
+@media (max-width: 959px) {
+  .skills-box:not(:last-child) {
     padding-bottom: 30rem;
   }
 }
 
 .products-img {
-  transform: translateX(50px);
-  /* 最初は元の位置より左にずらしておく */
+  transform: translateX(100px);
   opacity: 0;
-  /* 最初は非表示にしておく */
-  transition: opacity 1s,transform 1s;
+  transition: opacity 1s,transform 1.5s;
 }
 
 .products-img__Loveandbeer {
@@ -337,10 +391,7 @@ header {
 
 .fadein {
   opacity: 1 !important;
-  /* 表示させる */
   transform: translateX(0) !important;
-  /* 位置を最初の位置に戻す */
-  z-index: 5;
 }
 
 .products-img__ideabox {
@@ -369,11 +420,9 @@ header {
 
 .pd-txt {
   height: 100vh;
-  transform: translateX(-50px);
-  /* 最初は元の位置より左にずらしておく */
+  transform: translateX(-100px);
   opacity: 0;
-  /* 最初は非表示にしておく */
-  transition: opacity 1s,transform 1s;
+  transition: opacity 1s,transform 1.5s;
 }
 
 @media (max-width: 959px) {
@@ -386,7 +435,7 @@ header {
   width: 90px;
   height: 90px;
   position: fixed;
-  right: 1rem;
+  right: 3%;
   bottom: 2.5rem;
   opacity: 0.6;
   z-index: 3;
@@ -417,6 +466,12 @@ header {
   text-align: center;
 }
 
+@media (max-width: 959px) {
+  #page_top a::before {
+    font-size: 1.5rem;
+  }
+}
+
 #page_top a::after {
   content: 'PAGE TOP';
   font-size: 1rem;
@@ -429,4 +484,11 @@ header {
   margin: auto;
   text-align: center;
   color: #fff;
+}
+
+@media (max-width: 959px) {
+  #page_top a::after {
+    font-size: 0.5rem;
+    top: 30px;
+  }
 }
