--- a/scss/index.scss
+++ b/scss/index.scss
@@ -106,12 +106,60 @@ $font-size-xxl: 1.875rem;
     width: 12rem;
     height: 5px;
     background-color: #FF0606;
+    transition:
+        background-color 3s ease-out 2s, 
+        width 0.25s ease-out 0.5s;
     @include respond-below(lg) {
         bottom: 4.5rem;
         left: 1rem;
         width: 5rem;
 	}
 }
+
+// .text-secttl{
+//     &::before,
+//     &::after {
+//     content: '';
+//     position: absolute;
+//     }
+// }
+
+// .text-secttl {
+//     &::before,
+//     &::after {
+//     // Set border to invisible, so we don't see a 4px border on a 0x0 element before the transition starts
+//     border: 2px solid transparent;
+//     width: 0;
+//     height: 0;
+//     }
+
+//   // This covers the top & right borders (expands right, then down)
+//     &::before {
+//         top: 0;
+//         left: 0;
+//     }
+
+//   // And this the bottom & left borders (expands left, then up)
+//     &::after {
+//         bottom: 0;
+//         right: 0;
+//     }
+
+//   // Hover styles
+//     &:hover::before,
+//     &:hover::after {
+//     width: 15rem;
+//     height: 3px;
+//     }
+
+//     &:hover::after {
+//     border-bottom: red; // Make borders visible
+//     transition:
+//       border-color 0s ease-out 0.5s, // Wait for ::before to finish before showing border
+//       width 0.25s ease-out 0.5s, // And then exanding width
+//       height 0.25s ease-out 0.75s; // And finally height
+//     }
+// }
 
 .txt-pdttl{
     font-size: 4rem;
@@ -218,7 +266,7 @@ $mainGray: #231F1F;
     left: 100px;
     font-size: 100px;
     @include respond-below(lg) {
-        top:100px;
+        top: 40vh;
         left: 15px;
         font-size: 3rem;
 	}	
@@ -229,23 +277,23 @@ $mainGray: #231F1F;
     left: 400px;
     font-size: 40px;
     @include respond-below(lg) {
-		top: 10rem;
+		top: 50vh;
         left: 10rem;
         font-size: 1rem;
 	}	
 }
 
-.main-visual{
-    height: 700px;
-    @include respond-below(lg) {
-    height: 600px;
+video{
+    height: 110vh;
+    width: 100vw;
     position: absolute;
-    top: 40vh;
-    }
-    @include respond-below(md) {
-        height: 500px;
-        position: absolute;
-        top: 20vh;
+    object-fit: cover;
+    @include respond-below(lg) {
+        height: 100vh;
+        @include respond-below(md) {
+            height: 100vh;
+            object-fit: cover;
+        }
     }
 }
 
@@ -323,6 +371,7 @@ header{
     position: relative;
     z-index: 1;
     box-shadow: 2rem 2rem 0 0 $black-opc50 ;
+    transition: box-shadow .0.5s;
     @include respond-below(lg) {
         width: 13rem;
         height: 16rem;
@@ -338,6 +387,55 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    border-radius: 100%;
+
+    &::before,
+    &::after {
+    border-radius: 100%;
+    box-sizing: inherit;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    }
+}
+
+.skill-icon {
+    &::before,
+    &::after {
+        top: 0;
+        left: 0;
+    }
+
+    &::before {
+      border: 3px solid transparent; // We're animating border-color again
+    }
+
+    &:hover::before {
+        border-top-color: white; // Show borders
+        border-right-color: white;
+        border-bottom-color: white;
+
+        transition:
+        border-top-color 1s linear 0.5s, // Stagger border appearances
+        border-right-color 1s linear 0.5s,
+        border-bottom-color 1s linear 0.5s,
+    }
+
+    &::after {
+      border: 0 solid transparent; // Makes border thinner at the edges? I forgot what I was doing
+    }
+
+    &:hover::after {
+      border-top: 3px solid white; // Shows border
+      border-left-width: 3px; // Solid edges, invisible borders
+      border-right-width: 3px; // Solid edges, invisible borders
+      transform: rotate(270deg); // Rotate around circle
+        transition:
+        transform 1s linear 0s,
+        border-left-width 1s linear 0.35s; // Solid edge post-rotation
+    }
 }
 
 .skill-icon__img{
@@ -349,27 +447,39 @@ header{
     transform:translateY(100px);
     opacity: 0;
     transition:opacity 1s,transform 1.5s;
+    @include respond-below(lg) {
+        transform:translateY(100px);
+        opacity: 0;
+        transition:opacity 1s,transform 1s;
+    }
 }
 
 .skills-box:nth-child(2){
     transform:translateY(150px);
     opacity: 0;
     transition:opacity 2s,transform 1.5s;
+    @include respond-below(lg) {
+        transform:translateY(100px);
+        opacity: 0;
+        transition:opacity 1s,transform 1s;
+    }
 }
 
 .skills-box:nth-child(3){
     transform:translateY(200px);
     opacity: 0;
     transition:opacity 3s,transform 1.5s;
+    @include respond-below(lg) {
+        transform:translateY(100px);
+        opacity: 0;
+        transition:opacity 1s,transform 1s;
+    }
 }
 
 .skills-box:nth-child(4){
     transform:translateY(250px);
     opacity: 0;
     transition:opacity 2s,transform 1.5s;
-}
-
-.skills-box{
     @include respond-below(lg) {
         transform:translateY(100px);
         opacity: 0;
@@ -500,3 +610,7 @@ header{
         top: 30px;
     }
 }
+
+
+
+
