--- a/scss/index.scss
+++ b/scss/index.scss
@@ -90,6 +90,28 @@ $font-size-xxl: 1.875rem;
 	}
 }
 
+.text-secCon{
+    font-size: 6rem;
+    padding-left: 3rem;
+    padding-bottom: 5rem;
+    position: relative;
+    @include respond-below(lg) {
+        font-size: 4rem;
+        padding-left: 0.5rem;
+        padding-bottom: 5rem;
+    }
+    @include respond-below(md) {
+        font-size: 5rem;
+        padding-left: 0.5rem;
+        padding-bottom: 5rem;
+	}
+    @include respond-below(sm) {
+        font-size: 3.5rem;
+        padding-left: 0.5rem;
+        padding-bottom: 5rem;
+	}
+}
+
 .typing {
     opacity: 0;
     }
@@ -116,50 +138,24 @@ $font-size-xxl: 1.875rem;
 	}
 }
 
-// .text-secttl{
-//     &::before,
-//     &::after {
-//     content: '';
-//     position: absolute;
-//     }
-// }
-
-// .text-secttl {
-//     &::before,
-//     &::after {
-//     // Set border to invisible, so we don't see a 4px border on a 0x0 element before the transition starts
-//     border: 2px solid transparent;
-//     width: 0;
-//     height: 0;
-//     }
-
-//   // This covers the top & right borders (expands right, then down)
-//     &::before {
-//         top: 0;
-//         left: 0;
-//     }
-
-//   // And this the bottom & left borders (expands left, then up)
-//     &::after {
-//         bottom: 0;
-//         right: 0;
-//     }
-
-//   // Hover styles
-//     &:hover::before,
-//     &:hover::after {
-//     width: 15rem;
-//     height: 3px;
-//     }
-
-//     &:hover::after {
-//     border-bottom: red; // Make borders visible
-//     transition:
-//       border-color 0s ease-out 0.5s, // Wait for ::before to finish before showing border
-//       width 0.25s ease-out 0.5s, // And then exanding width
-//       height 0.25s ease-out 0.75s; // And finally height
-//     }
-// }
+.text-secCon::after {
+    position: absolute;
+    bottom: 5rem;
+    left: 3.5rem;
+    z-index: 2;
+    content: '';
+    width: 10rem;
+    height: 5px;
+    background-color: #FF0606;
+    transition:
+        background-color 3s ease-out 2s, 
+        width 0.25s ease-out 0.5s;
+    @include respond-below(lg) {
+        bottom: 4.5rem;
+        left: 1rem;
+        width: 5rem;
+	}
+}
 
 .txt-pdttl{
     font-size: 4rem;
@@ -299,7 +295,7 @@ video{
 }
 
 header{
-    height: 100vh;
+    height: 110vh;
     background-color: $black;
 }
 
@@ -331,6 +327,14 @@ header{
     padding-top: 20rem;
     @include respond-below(lg) {
         padding-top: 10rem;
+    }
+}
+
+.secCon{
+    padding-top: 5rem;
+    padding-bottom: 10rem;
+    @include respond-below(lg) {
+        padding-top: 5rem;
     }
 }
 
@@ -531,6 +535,17 @@ header{
 	}
 }
 
+.products-img__rpg{
+    width: 100%;
+    height: 70vh;
+    object-fit: cover;
+    object-position: left;
+    @include respond-below(lg) {
+        width: 82vw;
+        height: 50vh;
+	}
+}
+
 .pd-img{
     height: 100vh;
     @include respond-below(lg) {
@@ -553,7 +568,56 @@ header{
 //  SECTION CONTACTS
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
+form{
+    width: 80vh;
+}
 
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+  /* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+  /* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.tblttl{
+    width: 20vh;
+}
+
+.tblRq{
+    width: 10vh;
+}
+
+.tblContent{
+    width: 100%;
+}
+
+.backbtn{
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 //  FOOTER
@@ -610,6 +674,29 @@ header{
         font-size: 0.5rem;
         top: 30px;
     }
+}
+
+.modal{
+    display: none;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.modal__bg{
+    background: rgba(0,0,0,0.8);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
+.modal__content{
+    background: #fff;
+    left: 50%;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 30%;
 }
 
 
