--- a/scss/index.css
+++ b/scss/index.css
@@ -280,6 +280,12 @@ header {
 }
 
 @media (max-width: 959px) {
+  header {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 959px) {
   .order1 {
     order: 1;
   }
@@ -574,40 +580,52 @@ header {
 }
 
 form {
-  width: 80vh;
+  width: 50vw;
+}
+
+@media (max-width: 959px) {
+  form {
+    width: 100%;
+  }
 }
 
 input[type=text], select, textarea {
   width: 100%;
-  /* Full width */
   padding: 12px;
-  /* Some padding */
   border: 1px solid #ccc;
-  /* Gray border */
   border-radius: 4px;
-  /* Rounded borders */
   box-sizing: border-box;
-  /* Make sure that padding and width stays in place */
   margin-top: 6px;
-  /* Add a top margin */
   margin-bottom: 16px;
-  /* Bottom margin */
   resize: vertical;
 }
 
-/* Style the submit button with a specific background color etc */
+@media (max-width: 959px) {
+  input[type=text], select, textarea {
+    width: 100%;
+  }
+}
+
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 12px 20px;
-  border: none;
   border-radius: 4px;
+  border-bottom: solid 4px #000000;
   cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: red;
+}
+
+input[type=submit]:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  -webkit-transform: translateX(4px);
+  transform: translateX(4px);
+  border-bottom: none;
+  margin-bottom: 4px;
 }
 
 .tblttl {
@@ -623,7 +641,7 @@ input[type=submit]:hover {
 }
 
 .backbtn {
-  background-color: #4CAF50;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 12px 20px;
   border: none;
@@ -716,4 +734,10 @@ input[type=submit]:hover {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 30%;
+}
+
+@media (max-width: 959px) {
+  .modal__content {
+    width: 80%;
+  }
 }
