--- a/scss/index.scss
+++ b/scss/index.scss
@@ -297,6 +297,9 @@ video{
 header{
     height: 110vh;
     background-color: $black;
+    @include respond-below(lg) {
+        height: 100vh;
+    }
 }
 
 .order1{
@@ -414,32 +417,32 @@ header{
     }
 
     &::before {
-      border: 3px solid transparent; // We're animating border-color again
+        border: 3px solid transparent;
     }
 
     &:hover::before {
-        border-top-color: white; // Show borders
+        border-top-color: white;
         border-right-color: white;
         border-bottom-color: white;
 
         transition:
-        border-top-color 1s linear 0.5s, // Stagger border appearances
+        border-top-color 1s linear 0.5s,
         border-right-color 1s linear 0.5s,
         border-bottom-color 1s linear 0.5s,
     }
 
     &::after {
-      border: 0 solid transparent; // Makes border thinner at the edges? I forgot what I was doing
+        border: 0 solid transparent;
     }
 
     &:hover::after {
-      border-top: 3px solid white; // Shows border
-      border-left-width: 3px; // Solid edges, invisible borders
-      border-right-width: 3px; // Solid edges, invisible borders
-      transform: rotate(270deg); // Rotate around circle
+        border-top: 3px solid white;
+        border-left-width: 3px;
+        border-right-width: 3px;
+        transform: rotate(270deg);
         transition:
         transform 1s linear 0s,
-        border-left-width 1s linear 0.35s; // Solid edge post-rotation
+        border-left-width 1s linear 0.35s;
     }
 }
 
@@ -569,33 +572,47 @@ header{
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 form{
-    width: 80vh;
+    width: 50vw;
+    @include respond-below(lg) {
+        width: 100%;
+    }
 }
 
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    @include respond-below(lg) {
+        width: 100%;
+    }
 }
 
-  /* Style the submit button with a specific background color etc */
+
 input[type=submit] {
-    background-color: #4CAF50;
+    background-color: $black-opc50;
     color: white;
     padding: 12px 20px;
-    border: none;
     border-radius: 4px;
+    border-bottom: solid 4px $black;
     cursor: pointer;
 }
 
-  /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: red;
+}
+
+input[type=submit]:active {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+    border-bottom: none;
+    margin-bottom: 4px;
 }
 
 .tblttl{
@@ -611,7 +628,7 @@ input[type=submit]:hover {
 }
 
 .backbtn{
-    background-color: #4CAF50;
+    background-color: $black-opc50;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -623,6 +640,14 @@ input[type=submit]:hover {
 //  FOOTER
 //–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 
+
+//–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
+//  JS
+//–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
+
+
+//  PAGE TOP BUTTON
+//––––––––––––––––––––––––––––––––––––––––––––––––––
 #page_top{
     width: 90px;
     height: 90px;
@@ -676,6 +701,9 @@ input[type=submit]:hover {
     }
 }
 
+//  SEND CONFIRM MODAL
+//––––––––––––––––––––––––––––––––––––––––––––––––––
+
 .modal{
     display: none;
     height: 100vh;
@@ -697,6 +725,9 @@ input[type=submit]:hover {
     top: 50%;
     transform: translate(-50%,-50%);
     width: 30%;
+    @include respond-below(lg) {
+        width: 80%;
+    }
 }
 
 
